--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,46 @@
-#mapdiv {
-    height: 100vh;
+* { 
+    padding: 0;
+    margin: 0;
 }
 
-.main {
-    display: flex;
+body {
+    height: 100vh;
+    display: grid;
+    grid-template-rows: 3rem auto;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: medium;
+}
+
+#map-panel {
+    z-index: 900;
+    position: absolute;
+    top: 4rem;
+    right: 1rem;
+}
+
+#data-list {
+    margin-top: 1rem;
+    background-color: #f6f6f6d6;
+    border-radius: 6px;
+    padding: 0.3rem
+}
+
+.side-bar__button {
+    background-color: lightgray;
+    padding: .5rem;
+    font-size: medium;
+    border-radius: 5px;
+    border-width: 2px;
+}
+
+.side-bar__button:hover {
+    background-color: rgb(175, 175, 175);
+}
+
+.measures {
+    list-style: none;
+}
+
+#mapdiv {
+    height: 100%;
 }
