--- a/src/style.css
+++ b/src/style.css
@@ -1,46 +1,75 @@
 * { 
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 body {
     height: 100vh;
-    display: grid;
-    grid-template-rows: 3rem auto;
     font-family: Arial, Helvetica, sans-serif;
     font-size: medium;
 }
 
-#map-panel {
-    z-index: 900;
-    position: absolute;
-    top: 4rem;
-    right: 1rem;
+#mapdiv {
+    height: 100vh;
 }
 
-#data-list {
-    margin-top: 1rem;
+#inspection-info {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    width: 33vw;
+    min-width: 18rem;
+    z-index: 900;
+    padding: 1rem;
+    background-color: #f6f6f6d6;
+    border-radius: 6px;   
+}
+
+.area-table {
+    width: 100%;
+    border-collapse: collapse;
+}   
+
+.area-table th,
+.area-table td {
+    text-align: left;
+    width: 30%;
+    border-bottom: 1px solid black;
+}
+
+#area_selection {
+    background-color: #f6f6f6d6;
+    border: none;
+    font: inherit;
+}
+
+#map-info {
+    min-width: 15rem;
+    z-index: 900;
+    position: absolute;
+    bottom: 1rem;
+    left: 1rem;
+    margin-top: 0.5rem;
     background-color: #f6f6f6d6;
     border-radius: 6px;
     padding: 0.3rem
 }
 
-.side-bar__button {
+#map-controls {
+    display: flex;
+}
+
+.map-info__button {
+    flex: 1;
     background-color: lightgray;
     padding: .5rem;
+    margin: 0 .1rem;
     font-size: medium;
     border-radius: 5px;
     border-width: 2px;
 }
 
-.side-bar__button:hover {
+.map-info__button:hover {
     background-color: rgb(175, 175, 175);
-}
-
-.measures {
-    list-style: none;
-}
-
-#mapdiv {
-    height: 100%;
 }
